hphp/test/slow/class_type_constant/type_constant3.php.expectf
Fatal error: A type specifier is expected here. in %s/test/slow/class_type_constant/type_constant3.php on line 5